Follow-up from "xwayland: fix GBM on driver without explicit modifiers"
The following discussion from !1054 (merged) should be addressed:
-
@daenzer started a discussion: (+9 comments)
[…]
Michel Dänzer (@daenzer):
If advertising INVALID & LINEAR is valid in this case, then so would be advertising only LINEAR, wouldn't it? In which case, Xwayland would need to pass GBM_BO_USE_LINEAR to gbm_bo_create, or the compositor might not accept the resulting buffer.
Simon Ser (@emersion):
In theory it can happen, yeah. Ideally Xwayland would check that INVALID is advertised by the compositor before trying the implicit modifier codepath without GBM_BO_USE_LINEAR.
Edited by Olivier Fourdan